upgraded UI to flexbox to fix layout issues

--- a/app.css
+++ b/app.css
@@ -1,81 +1,130 @@
 body {
-  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	line-height: 1.4em;
-	background: #f5f5f5;
-}
+		font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+		line-height: 1.4em;
+		background: #f5f5f5;
+	}
 
-#app {
-  margin: 50px auto;
-  border: solid grey 3px;
-  min-height: 400px;
-  max-width: 400px;
-  background: #fff;
-  box-shadow: 0 2px 4px 0 #00000033,
-	            0 25px 50px 0 rgba(0, 0, 0, 0.1);
-}
+	#app {
+		margin: 50px auto;
+		border: solid grey 3px;
+		min-height: 400px;
+		max-width: 400px;
+		background: #fff;
+		box-shadow: 0 2px 4px 0 #00000033,
+		0 25px 50px 0 rgba(0, 0, 0, 0.1);
+	}
 
-li {
-  list-style-type: none;
-  margin-left: 15px;
-  margin-bottom: 5px;
-}
 
-#header {
-  margin: 15px;
-}
+	#toggle-all {
+		transform: translate(-7px, 0px);
+	}
 
-#toggle-all {
-  transform: translate(-7px, 0px);
-}
+	input {
+		min-width: 250px;
+		font-size: 14px;
+		font-weight: 100;
+		font-stretch: expanded;
+		font-style: italic;
+		color: #e6e6e6;
+	}
 
-input {
-  min-width: 250px;
-  font-size: 16px;
-  font-weight: 100;
-  font-stretch: expanded;
-  font-style: italic;
-  color: #e6e6e6;
-}
+	#add-todo {
+		background: #3498db;
+		border-radius: 5px;
+		color: #ffffff;
+		font-size: 10px;
+		margin-left: 15px;
+		padding: 5px 5px;
+		text-decoration: none;
+	}
 
-#todo-list {
-  padding: 0px 15px;
-}
+	#add-todo:focus {
+		outline: 0;
+	}
 
-.todo {
-  color: black;
-}
+	#add-todo:hover {
+		background: #3cb0fd;
+		text-decoration: none;
+	}
 
-.destroy {
-  float: right;
-  transform: translate(-50px, -25px);
-  border: none;
-  font-size: 15px;
-  color: #e6e6e6;
-}
-.destroy:focus {
-  outline:0;
-}
 
-.destroy:hover {
-  color: firebrick;
-}
+	/* ============================= */
 
-.todo.completed{
-  text-decoration-line: line-through;
-}
+	/* Delete button CSS begins here */
 
-.sub-todo.completed{
-  text-decoration-line: line-through;
-}
+	/* ============================= */
 
-.sub-todo {
-  position: relative;
-  transform: translate(20px);
-  color: grey;
-}
+	.destroy {
+		border: none;
+		font-size: 15px;
+		color: #e6e6e6;
+	}
 
-#toggle {
-  position: absolute;
-  width: 10px;
-  transform: translate(-5px, 0px)
-}
+	.destroy:focus {
+		outline: 0;
+	}
+
+	.destroy:hover {
+		color: firebrick;
+		cursor: pointer;
+	}
+
+	/* =========================== */
+
+	/* Delete button CSS ends here */
+
+	/* =========================== */
+
+	.todo.completed {
+		text-decoration-line: line-through;
+	}
+
+	.sub-todo.completed {
+		text-decoration-line: line-through;
+	}
+
+	.sub-todo {
+		position: relative;
+		transform: translate(20px);
+		color: grey;
+	}
+
+
+	/************************************************************************************************************
+	 Mikael CSS 
+	 ************************************************************************************************************/
+
+	.todoContainer {
+		padding: 20px;
+	}
+
+	#todo-list {
+		margin-top: 10px;
+	}
+
+	#toggle {
+		margin: 0;
+	}
+
+	.todo__subTask {
+		padding-left: 20px;
+	}
+
+	ul {
+		padding: 0;
+		margin: 0;
+	}
+
+	li {
+		list-style-type: none;
+		margin-bottom: 5px;
+	}
+
+	.todo {
+		color: black;
+		display: flex;
+		/* I recommend reading https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
+		justify-content: space-between;
+		/* This property counts all the children and spaces them accordingly, since we ony have to children .todo__task and the checkbox it will space them to the left and right edge */
+		align-items: center;
+	}
